llvm/test/fail/18nocond.dna
def main
   var a is int
   if a:
     skip
   writeString: "\nThis program is wrong!\n"
